--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 /*
 CSS EXERCISES
 
-11) Give a maximum width to the body and center it into the page
-12) Set every h1 to be centered
+11) Give a maximum width to the body and center it into the page**
+12) Set every h1 to be centered??**
 13) Change the color of each link in the page
-14) Create a class with a border assigned to it
+14) Create a class with a border assigned to it**
 15) Set the previously created table to have rounded corners
 16) Add a margin between every paragraph
 17) Create a class which changes font size and text weight when applied
